# memeblink

./: Cargo.toml  LICENSE  send  send10
dashboard/: package.json
dashboard/src/: App.css  App.tsx  types.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: lib.rs
dashboard/src-tauri/src/matrix/: mod.rs  parser.rs
dashboard/src/components/: ControlPanel.tsx  MatrixPanel.tsx  MemeSender.tsx  ScreenPreview.tsx
overlay/: Cargo.toml
overlay/src/: app.rs  constants.rs  events.rs  main.rs
overlay/src/ipc/: server.rs
overlay/src/platform/: mod.rs  traits.rs
overlay/src/platform/wayland/: mod.rs
overlay/src/renderer/: decoder.rs  mod.rs  texture.rs
shared/: Cargo.toml
shared/src/: constants.rs  error.rs  models.rs
