[workspace]
members = ["overlay", "shared"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["YetAnotherMechanicusEnjoyer"]

[workspace.dependencies]
winit = { version = "0.30.13", default-features = false, features = [
  "wayland",
  "x11",
  "rwh_06",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
log = "0.4.30"
raw-window-handle = "0.6.2"
image = { version = "0.25.10", default-features = false, features = [
  "gif",
  "png",
  "jpeg",
  "webp",
] }
softbuffer = "0.4.8"
reqwest = { version = "0.13.4", features = ["blocking"] }
fontdue = "0.9.3"
font-kit = "0.14.3"
