[package]
name = "overlay"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
winit.workspace = true
log.workspace = true
raw-window-handle.workspace = true
serde_json.workspace = true
image.workspace = true
softbuffer.workspace = true
reqwest.workspace = true
fontdue.workspace = true
font-kit.workspace = true
