[package]
name = "overlay"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
winit.workspace = true
log.workspace = true
raw-window-handle.workspace = true
serde_json.workspace = true
image.workspace = true
reqwest.workspace = true
fontdue.workspace = true
font-kit.workspace = true
wgpu = "0.19.4"
pollster = "0.4.0"
