[package]
name = "dashboard"
description = "A Tauri App"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
shared = { path = "../../shared" }
tokio = { version = "1.52.3", features = ["full"] }
matrix-sdk = { version = "0.18", features = [
  "sso-login",
  "e2e-encryption",
  "sqlite",
] }
